--- a/src/app/feature/hr-services/hrservices-home/hrservices-home.component.html
+++ b/src/app/feature/hr-services/hrservices-home/hrservices-home.component.html
@@ -1,2 +1,5 @@
-<app-side-nav></app-side-nav>
-<router-outlet></router-outlet>
+<div class="main">
+    <app-side-nav></app-side-nav>
+    <router-outlet></router-outlet>
+</div>
+
