--- a/src/app/common/shared/side-nav/side-nav.component.scss
+++ b/src/app/common/shared/side-nav/side-nav.component.scss
@@ -32,3 +32,48 @@ a{
     margin-bottom: 4px;
     text-align: center;
 }
+
+
+// --------------//
+
+.navbar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    box-shadow: 0 3px 5px -1px #0003, 0 6px 10px #00000024, 0 1px 18px #0000001f;
+    color: #fff;
+}
+
+.navbar-header{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 4px 16px;
+    background: #3f51b5;
+    justify-content: space-between;
+}
+
+.logo-button{
+    color: inherit;
+}
+.logo-img{
+    width: 80px;
+    height: 35px;
+    border-radius: 2px;
+}
+
+.profile-icon{
+    border-radius: 50%;
+    width: 40px;
+    height: 35px;
+}
+
+.side-nav{
+    width: 100px;
+    height: calc(100vh - 56px);
+    overflow: auto;
+    margin-top: 65px;
+    color: #fff;
+}
